# Synapse

./: .gitmodules  NOTICE  README.md  pyproject.toml
LICENSES/: MIT.txt
configs/: config.yaml  data_config.yaml  example_config.yaml  hhml_convert_config.yaml  hhml_eval_config.yaml  model_config.yaml  run_config.yaml
src/synapse/: main.py
src/synapse/core/: callbacks.py  config.py  data_module.py  dataset.py  fileio.py  logger.py  metrics.py  model_module.py  optimizers.py  tools.py
src/synapse/loss_functions/: loss.py
src/synapse/models/: EveNetLite.py  EventTransformer.py  ParticleTransformer.py  Transformer.py
src/synapse/widgets/: convert_ntuple_hhml.py  plot_tensorboard.py
